<resources>
    <string name="app_name">Halo</string>
    <string name="title_learn">Learn</string>
    <string name="title_prevent">Prevention</string>
    <string name="title_report">Report</string>
    <string name="title">What is child trafficking and sexual exploitation?</string>
    <string name="child">Child trafficking and sexual assault are deeply distressing issues that continue to plague societies worldwide. They not only violate the rights of innocent children but also inflict long-lasting physical, emotional, and psychological harm. Here are some key points to consider regarding these grave concerns:\n\n</string>
    <string name="child2">- Child trafficking involves the illegal recruitment, transportation, and exploitation of children for various purposes, including forced labor, sex trafficking, and organ trafficking.
\n\n\n
- It is a highly profitable criminal industry, driven by factors such as poverty, conflict, and social vulnerability, which makes children more susceptible to manipulation and coercion.
\n\n\n
- Traffickers often deceive families with false promises of better opportunities for their children, only to subject them to horrendous conditions, physical abuse, and sexual exploitation.
\n\n\n
- The consequences of child trafficking are devastating, with victims suffering from physical injuries, psychological trauma, disrupted education, and a loss of trust in society.
</string>
    <string name="sa">- Sexual assault against children is a severe form of abuse that involves any sexual act or behavior inflicted upon a child without their consent.
\n\n\n
- The perpetrators of sexual assault can be strangers, acquaintances, or even family members, which makes it a complex and challenging issue to address.
\n\n\n
- Victims of sexual assault endure profound emotional and psychological trauma, including feelings of shame, guilt, fear, and a distorted sense of self-worth.
\n\n\n
- The long-term effects of sexual assault can manifest as post-traumatic stress disorder (PTSD), depression, anxiety, self-harm, substance abuse, and difficulties in forming healthy relationships.
</string>
    <string name="conc">It is crucial to raise awareness, strengthen legal frameworks, and provide comprehensive support services for survivors to combat child trafficking and sexual assault effectively. The protection and well-being of children must be a priority for individuals, communities, and governments, working collectively to create a safe and nurturing environment for every child.
\n\n\n\n Heres a look at what sexual exploitation looks like:
        \n\n\n
    </string>

    <string name="desc_prevent">How can you prevent child trafficking and sexual exploitation?</string>
    <string name="tip_1">Raise awareness: Educate yourself and others about the realities and dangers of child trafficking and sexual exploitation. Share information through social media, community events, and workshops to help raise awareness. \n \n</string>
    <string name="tip_2">Promote child protection: Encourage the implementation of child protection policies in schools, community organizations, and other institutions. These policies should include strict background checks for employees and volunteers who work with children. \n\n</string>
    <string name="tip_3">Report suspicious activities: If you suspect child trafficking or sexual exploitation, report it to the appropriate authorities immediately. In many countries, there are helplines and hotlines dedicated to reporting such cases. You can also report a case using our report option which can navigated to using the bottom right button.\n\n</string>
    <string name="report_tit">Want to report something? Report here.</string>
    <string name="report_intro">Remember to include as much information as possible, such as contact information, locations, names, descriptions, times, etc. The more information you provide, the easier it will be for us to notify emergency services.</string>
    <string name="title_activity_settings">settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>